# AutoHedge

./: AtestClass.cpp  AtestClass.h  AutoHedge.ini  CMakeLists.txt  DBDriver.cpp  DBDriver.h  HedgeDriver.cpp  HedgeDriver.h  MarketDataHandle.cpp  MarketDataHandle.h  OptionCalculator.cpp  OptionCalculator.h  README.md  TradingHandle.h  example.cpp  main.cpp
