cmake_minimum_required(VERSION 3.5)
project(AutoHedge)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(BOOST_ROOT /home/patrick/Documents/boost_1_62_0)
INCLUDE_DIRECTORIES(${BOOST_ROOT})
find_package(Threads)
find_package(Boost 1.62 COMPONENTS log system thread filesystem)
ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
set(SOURCE_FILES main.cpp MarketDataHandle.cpp MarketDataHandle.h TradingHandle.cpp TradingHandle.h DBDriver.cpp DBDriver.h HedgeDriver.cpp HedgeDriver.h)
LINK_DIRECTORIES(/home/patrick/Documents/boost_1_62_0/stage/lib)
add_library(thostmduserapi SHARED IMPORTED)
add_library(thosttraderapi SHARED IMPORTED)
SET_TARGET_PROPERTIES(thostmduserapi PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/ctpapi_linux64/thostmduserapi.so)
SET_TARGET_PROPERTIES(thosttraderapi PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/ctpapi_linux64/thosttraderapi.so)
add_executable(AutoHedge ${SOURCE_FILES})
target_link_libraries(AutoHedge QuantLib mysqlcppconn thostmduserapi thosttraderapi ${CMAKE_THREAD_LIBS_INIT} ${Boost_LOG_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
